# codeslayer

./: .gitignore  AUTHORS  AutotoolsPlugin.md  CommentsPlugin.md  CompletionAPI.md  CtagsPlugin.md  DevelopmentNotes.md  FileSearchPlugin.md  GObjectIntrospection.md  HowToCreatePlugin.md  HowToInstallPlugin.md  Makefile.am  Makefile.in  PaneTearOffs.md  Plugins.md  ProjectHome.md  aclocal.m4  codeslayer.desktop.in  codeslayer.pc.in  configure  configure.ac
.codeslayer/: autotools.conf  ctags.conf
codeslayer/: Makefile.am  Makefile.in  codeslayer-abstract-engine.c  codeslayer-abstract-engine.h  codeslayer-abstract-pane.c  codeslayer-abstract-pane.h  codeslayer-application.c  codeslayer-application.h  codeslayer-bottom-pane.c  codeslayer-bottom-pane.h  codeslayer-completion-proposal.c  codeslayer-completion-proposal.h  codeslayer-completion-proposals.c  codeslayer-completion-proposals.h  codeslayer-completion-provider.c  codeslayer-completion-provider.h  codeslayer-completion.c  codeslayer-completion.c.XXJ28V  codeslayer-completion.h  codeslayer-config-handler.c  codeslayer-config-handler.h  codeslayer-config.c  codeslayer-config.h  codeslayer-document-linker.c  codeslayer-document-linker.h  codeslayer-document-search-dialog.c  codeslayer-document-search-dialog.h  codeslayer-document-search-index.c  codeslayer-document-search-index.h  codeslayer-document-search.c  codeslayer-document-search.h  codeslayer-document.c  codeslayer-document.h  codeslayer-documentsearch-dialog.c  codeslayer-documentsearch-dialog.h  codeslayer-documentsearch-index.c  codeslayer-documentsearch-index.h  codeslayer-documentsearch.c  codeslayer-documentsearch.h  codeslayer-editor-linker.c  (+132 more)
docs/: Makefile.in
docs/reference/: Makefile.am  Makefile.in  codeslayer-docs.sgml  codeslayer-sections.txt  codeslayer.types
docs/reference/html/: CodeSlayer.html  CodeSlayerAbstractPane.html  CodeSlayerApplication.html  CodeSlayerBottomPane.html  CodeSlayerCompletion.html  CodeSlayerCompletionProposal.html  CodeSlayerCompletionProvider.html  CodeSlayerDocument.html  CodeSlayerDocumentLinker.html  CodeSlayerDocumentSearch.html  CodeSlayerDocumentSearchDialog.html  CodeSlayerEditor.html  CodeSlayerEditorLinker.html  CodeSlayerEngine.html  CodeSlayerGroup.html  CodeSlayerGroupProperties.html  CodeSlayerGroups.html  CodeSlayerListView.html  CodeSlayerMenuBar.html  CodeSlayerMenuBarEdit.html  CodeSlayerMenuBarEditor.html  CodeSlayerMenuBarFile.html  CodeSlayerMenuBarGroups.html  CodeSlayerMenuBarHelp.html  CodeSlayerMenuBarProjects.html  CodeSlayerMenuBarSearch.html  CodeSlayerMenuBarTools.html  CodeSlayerMenuBarView.html  CodeSlayerMenuItem.html  CodeSlayerNotebook.html  CodeSlayerNotebookPage.html  CodeSlayerNotebookPane.html  CodeSlayerNotebookSearch.html  CodeSlayerNotebookTab.html  CodeSlayerPlugin.html  CodeSlayerPlugins.html  CodeSlayerPluginsSelector.html  CodeSlayerPreferences.html  CodeSlayerPreferencesEditor.html  CodeSlayerPreferencesListView.html  (+32 more)
pixmaps/: Makefile.am  Makefile.in
pixmaps/16x16/: Makefile.am  Makefile.in
pixmaps/48x48/: Makefile.am  Makefile.in
po/: POTFILES.in  es.po
resources/: codeslayer-autogen.sh  codeslayer-marshaller.c  codeslayer-marshaller.h  codeslayer-tools.sh  codeslayer_marshal.list  codeslayer_marshal.sh
